--- a/pages/style.css
+++ b/pages/style.css
@@ -1,34 +1,67 @@
-.map
+h1
 {
-  width: 600px;
-  max-width: 95%;
-  height: auto;
-  margin: 16px auto;
-  border: 1px solid #555555;
-  box-sizing: border-box;
-  padding: 16px;
+  position: relative;
+  text-align: center;
+  font-size: 1.5em;
 }
 
-.geolonia-svg-map
+#navi
 {
-  width: 100%;
+  position: relative;
+  text-align: right;
 }
 
-.geolonia-svg-map .prefecture
-{
-  fill: #f7f7f7;
-  stroke: #666666;
-  cursor: pointer;
+@media screen and (min-width: 780px) {
+  #container
+  {
+    width: 90%;
+    max-width: 90%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  svg, #map
+  {
+    width: 80%;
+    max-width: 80%;
+    height: auto;
+    flex: 2;
+  }
+
+  #table
+  {
+    width: 20%;
+    height: auto;
+    flex: 1;
+  }
 }
 
-.geolonia-svg-map .boundary-line
-{
-  stroke: #999999;
-}
+@media screen and (max-width: 780px) {
+  #container
+  {
+    position: relative;
+    width: 90%;
+    max-width: 90%;
+    height: auto;
+  }
 
-.forkme
-{
-  position: fixed;
-  top: 0;
-  left: 0;
+  svg, #map
+  {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 300px;
+  }
+
+  #table
+  {
+    position: absolute;
+    top: 310px;
+    width: 60%;
+    height: 80%;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
 }
