--- a/pages/style.css
+++ b/pages/style.css
@@ -1,68 +1,59 @@
-h1
-{
-  position: relative;
-  text-align: center;
-  font-size: 1.5em;
+h1 {
+    position: relative;
+    text-align: center;
+    font-size: 1.5em;
+    cursor: url(edit.svg), auto;
 }
 
-#navi
-{
-  position: relative;
-  text-align: right;
+#navi {
+    position: relative;
+    text-align: right;
 }
 
 @media screen and (min-width: 780px) {
-  #container
-  {
-    width: 90%;
-    max-width: 90%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-  }
-
-  svg, #map
-  {
-    width: 80%;
-    max-width: 80%;
-    height: auto;
-    max-height: 80%;
-    flex: 2;
-  }
-
-  #table
-  {
-    width: 20%;
-    height: auto;
-    flex: 1;
-  }
+    #container {
+        width: 90%;
+        max-width: 90%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    svg,
+    #map {
+        width: 80%;
+        max-width: 80%;
+        height: auto;
+        max-height: 80%;
+        flex: 2;
+    }
+    #table {
+        width: 20%;
+        height: auto;
+        flex: 1;
+    }
 }
 
 @media screen and (max-width: 780px) {
-  #container
-  {
-    position: relative;
-    width: 90%;
-    max-width: 90%;
-    height: auto;
-  }
-
-  svg, #map
-  {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 300px;
-  }
-
-  #table
-  {
-    position: absolute;
-    top: 310px;
-    width: 60%;
-    height: 80%;
-    margin-left: 20%;
-    margin-right: 20%;
-  }
+    #container {
+        position: relative;
+        width: 90%;
+        max-width: 90%;
+        height: auto;
+    }
+    svg,
+    #map {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 300px;
+    }
+    #table {
+        position: absolute;
+        top: 310px;
+        width: 60%;
+        height: 80%;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
 }
